Fix background not covering full height issue

--- a/client/src/components/Exercises/ExerciseItem.scss
+++ b/client/src/components/Exercises/ExerciseItem.scss
@@ -1,6 +1,5 @@
 .workout-container {
   padding: 50px;
-  background-color: white;
 }
 
 .workouts {
